--- a/wow/src/styles/Basics.scss
+++ b/wow/src/styles/Basics.scss
@@ -1,14 +1,13 @@
 $blue: #1B46F5;
-$black: #000000;
 $pink: #EA42A7;
 $green: #5AC45F;
 $yellow: #9DD544;
 $red: #DE5148;
+$black: #000000;
 
 body {
-  --animation-length: 2000ms;
-  --animation-phase: calc(var(--animation-length) / 4);
-  --animation-delay-multiplier: 5;
-  --image-size: calc(var(--scene-size) / 8);
 }
 
+div {
+  box-sizing: border-box;
+}
