--- a/wow/src/styles/Fonts.css
+++ b/wow/src/styles/Fonts.css
@@ -1,3 +1,4 @@
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Medium.woff2') format('woff2'),
@@ -6,7 +7,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-BlackItalic.woff2') format('woff2'),
@@ -15,7 +16,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Black.woff2') format('woff2'),
@@ -24,7 +25,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Bold.woff2') format('woff2'),
@@ -33,7 +34,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-BoldItalic.woff2') format('woff2'),
@@ -42,7 +43,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-MediumItalic.woff2') format('woff2'),
@@ -51,7 +52,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-LightItalic.woff2') format('woff2'),
@@ -60,7 +61,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Regular.woff2') format('woff2'),
@@ -69,7 +70,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Italic.woff2') format('woff2'),
@@ -78,7 +79,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-ThinItalic.woff2') format('woff2'),
@@ -87,7 +88,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Thin.woff2') format('woff2'),
@@ -96,7 +97,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Roboto';
     src: url('/public/fonts/roboto/Roboto-Light.woff2') format('woff2'),
@@ -105,7 +106,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Elementsfour';
     src: url('/public/fonts/horizon/HorizonElementsfour.woff2') format('woff2'),
@@ -114,7 +115,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Outline';
     src: url('/public/fonts/horizon/HorizonOutline.woff2') format('woff2'),
@@ -123,7 +124,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Linestwo';
     src: url('/public/fonts/horizon/HorizonLinestwo.woff2') format('woff2'),
@@ -132,7 +133,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Elements';
     src: url('/public/fonts/horizon/HorizonElements.woff2') format('woff2'),
@@ -141,7 +142,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Elementsthree';
     src: url('/public/fonts/horizon/HorizonElementsthree.woff2') format('woff2'),
@@ -150,7 +151,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon';
     src: url('/public/fonts/horizon/HorizonRegular.woff2') format('woff2'),
@@ -159,7 +160,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Elementstwo';
     src: url('/public/fonts/horizon/HorizonElementstwo.woff2') format('woff2'),
@@ -168,7 +169,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Outlinetwo';
     src: url('/public/fonts/horizon/HorizonOutlinetwo.woff2') format('woff2'),
@@ -177,7 +178,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Horizon Lines';
     src: url('/public/fonts/horizon/HorizonLines.woff2') format('woff2'),
@@ -186,7 +187,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-BoldItalic.woff2') format('woff2'),
@@ -195,7 +196,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik Air';
     src: url('/public/fonts/aeonic/Aeonik-Air.woff2') format('woff2'),
@@ -204,7 +205,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik Air';
     src: url('/public/fonts/aeonic/Aeonik-AirItalic.woff2') format('woff2'),
@@ -213,7 +214,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Black.woff2') format('woff2'),
@@ -222,7 +223,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Medium.woff2') format('woff2'),
@@ -231,7 +232,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Light.woff2') format('woff2'),
@@ -240,7 +241,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-BlackItalic.woff2') format('woff2'),
@@ -249,7 +250,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Bold.woff2') format('woff2'),
@@ -258,7 +259,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-RegularItalic.woff2') format('woff2'),
@@ -267,7 +268,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-MediumItalic.woff2') format('woff2'),
@@ -276,7 +277,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Regular.woff2') format('woff2'),
@@ -285,7 +286,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-ThinItalic.woff2') format('woff2'),
@@ -294,7 +295,7 @@
     font-style: italic;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-Thin.woff2') format('woff2'),
@@ -303,7 +304,7 @@
     font-style: normal;
     font-display: swap;
 }
-
+/*noinspection CssUnknownTarget*/
 @font-face {
     font-family: 'Aeonik';
     src: url('/public/fonts/aeonic/Aeonik-LightItalic.woff2') format('woff2'),
@@ -311,4 +312,54 @@
     font-weight: 300;
     font-style: italic;
     font-display: swap;
+}
+/*noinspection CssUnknownTarget*/
+/*@font-face {*/
+/*    font-family: 'Machina ul';*/
+/*    src: url('/public/fonts/machina/NeueMachina-Ultralight.woff2') format('woff2'),url('/public/fonts/machina/NeueMachina-Ultralight.woff') format('woff');*/
+/*    font-weight: 200;*/
+/*    font-style: normal*/
+/*}*/
+/*noinspection CssUnknownTarget*/
+/*@font-face {*/
+/*    font-family: 'Machina l';*/
+/*    src: url('/public/fonts/machina/NeueMachina-Light.woff2') format('woff2'),url('/public/fonts/machina/NeueMachina-Light.woff') format('woff');*/
+/*    font-weight: 300;*/
+/*    font-style: normal*/
+/*}*/
+/*noinspection CssUnknownTarget*/
+/*@font-face {*/
+/*    font-family: 'Machina bl';*/
+/*    src: url('/public/fonts/machina/NeueMachina-Black.woff2') format('woff2'),url('/public/fonts/machina/NeueMachina-Black.woff') format('woff');*/
+/*    font-weight: 900;*/
+/*    font-style: normal*/
+/*}*/
+/*noinspection CssUnknownTarget*/
+@font-face {
+    font-family: 'Machina r';
+    src: url('/public/fonts/machina/NeueMachina-Regular.woff2') format('woff2'), url('/public/fonts/machina/NeueMachina-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal
+}
+/*noinspection CssUnknownTarget*/
+/*@font-face {*/
+/*    font-family: 'Machina b';*/
+/*    src: url('/public/fonts/machina/NeueMachina-Bold.woff2') format('woff2'),url('/public/fonts/machina/NeueMachina-Bold.woff') format('woff');*/
+/*    font-weight: 700;*/
+/*    font-style: normal*/
+/*}*/
+/*noinspection CssUnknownTarget*/
+/*@font-face {*/
+/*    font-family: 'Machina m';*/
+/*    src: url('/public/fonts/machina/NeueMachina-Medium.woff2') format('woff2'),url('/public/fonts/machina/NeueMachina-Medium.woff') format('woff');*/
+/*    font-weight: 500;*/
+/*    font-style: normal*/
+/*}*/
+
+/*noinspection CssUnknownTarget*/
+@font-face {
+    font-family: 'Machina ub';
+    src: url('/public/fonts/machina/NeueMachina-Ultrabold.woff2') format('woff2'), url('/public/fonts/machina/NeueMachina-Ultrabold.woff') format('woff');
+    font-weight: 800;
+    font-style: normal
 }
