--- a/wow/src/styles/Glitch/Glitch1.scss
+++ b/wow/src/styles/Glitch/Glitch1.scss
@@ -1,4 +1,5 @@
 @import "../../styles/Basics";
+
 .just-glitch-preset-1 {
   .just-glitch-img-1 {
     opacity: 0;
@@ -8,15 +9,15 @@
   }
 
   .just-glitch-img-2 {
-    margin-top: -5px;
-    margin-left: -7px;
+    margin-top: var(--image-pos-top-small);
+    margin-left: var(--image-pos-top-small);
     animation: glitch-preset-1-1 var(--animation-length) infinite;
     z-index: 5;
   }
 
   .just-glitch-img-3 {
-    margin-top: 5px;
-    margin-left: 7px;
+    margin-top: var(--image-pos-bottom-small);
+    margin-left: var(--image-pos-right-small);
     filter: invert(1);
     animation: glitch-preset-1-2 var(--animation-length) infinite;
     z-index: 5;
