--- a/wow/src/Random/styles/Wave.scss
+++ b/wow/src/Random/styles/Wave.scss
@@ -14,29 +14,25 @@
       flex-direction: column;
       position: absolute;
       rotate: 90deg;
+      transform: skew(20deg) scaleY(-1);
+      margin-top: calc(var(--image-size) / 4);
     }
   }
 
   &-horizontal {
+    .just-random-wave {
+      transform: skew(20deg) scaleX(-1);
+      left: calc(var(--image-size) / -4);
+    }
   }
 }
+
 
 .just-random-wave {
   position: absolute;
   width: var(--scene-size);
   height: 0;
-  transform: skew(-20deg) rotateY(180deg);
   z-index: 20;
-  left: var(--image-size / -2);
-}
-
-@keyframes slide {
-  0% {
-    left: -100%;
-  }
-  100% {
-    left: 200%;
-  }
 }
 
 
