--- a/wow/src/styles/JustFrame.scss
+++ b/wow/src/styles/JustFrame.scss
@@ -1,18 +1,20 @@
 .just-random-frame {
-  width: 100%;
-  height: 100%;
   border: white 1px solid;
   overflow: hidden;
   background: black;
-  box-shadow: -1px 1px 0 0 black, -2px 2px 0 0 white, -3px 3px 0 0 black, -4px 4px 0 0 white, -5px 5px 0 0 black, -6px 6px 0 0 white;
+  box-shadow: -4px 4px 0 0 black, -5px 5px 0 0 white, -9px 9px 0 0 black, -10px 10px 0 0 white;
 }
 
-.just-random-frame.just-random-frame-plain {
-  box-shadow: none;
+.just-random-frame-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
 }
 
 .just-random-frame-toolbar {
-  height: 12px;
+  height: 18px;
   display: flex;
   justify-content: flex-end;
   position: relative;
@@ -24,58 +26,60 @@
 .just-random-frame-toolbar-item {
   border-left: 1px solid white;
   position: relative;
-  height: 12px;
-  width: 12px;
+  height: 18px;
+  width: 18px;
 }
 
 .just-random-frame-toolbar-close-1 {
-  width: 12px;
+  width: 11px;
   height: 1px;
   display: block;
   background: #ffffff;
   position: absolute;
   transform: rotate(-45deg);
-  left: 0;
-  bottom: 5.6px;
+  left: 3px;
+  bottom: 9px;
 }
 
 .just-random-frame-toolbar-close-2 {
-  width: 12px;
+  width: 11px;
   height: 1px;
   display: block;
   background: #ffffff;
   position: absolute;
   transform: rotate(45deg);
-  left: 0;
-  bottom: 5.6px;
+  left: 3px;
+  bottom: 9px;
 }
 
 .just-random-frame-toolbar-expand-1 {
   display: block;
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
   border: 1px solid #ffffff;
   position: absolute;
-  left: 1px;
-  bottom: 1px;
+  left: 3px;
+  bottom: 4px;
+  z-index: 10;
+  background: black;
 }
 
 .just-random-frame-toolbar-expand-2 {
   display: block;
-  width: 6px;
-  height: 6px;
+  width: 8px;
+  height: 8px;
   border: 1px solid #ffffff;
   position: absolute;
-  left: 3px;
-  bottom: 3px;
+  left: 6px;
+  bottom: 7px;
 }
 
 .just-random-frame-toolbar-minimize-1 {
   display: block;
-  width: 8px;
+  width: 7px;
   height: 1px;
   background: #ffffff;
   position: absolute;
-  bottom: 2px;
-  left: 2px;
+  bottom: 5px;
+  left: 5px;
 }
