--- a/wow/src/styles/Mint.scss
+++ b/wow/src/styles/Mint.scss
@@ -15,29 +15,90 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
 
 .mint {
   width: 100%;
-  height: 100%;
+}
+
+.mint-landscape {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  justify-content: space-evenly;
+  flex-grow: revert;
+}
+
+.mint-content {
+  width: 100%;
+  height: calc(100% - 69px);
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-between;
+}
+
+.mint-bottom {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  height: 69px;
+}
+
+.mint-landscape .wow-scroller {
+  width: 50%;
+  margin: 25% 0;
+}
+
+.mint-landscape .wow-scroller .just {
+  width: 100%;
+}
+
+.mint-landscape .wow-scroller .just-scroll-container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
   align-items: center;
+}
+
+.mint-landscape .description {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mint-landscape .actions {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mint-landscape .just {
+  --scene-size: calc(90%);
+}
+
+
+.unicorn {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  transform: scaleX(-1) translate(-40%, 8%);
+  height: 45vh;
 }
 
 .just-preview {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.just-preview .just {
-  width: 512px;
-  height: 512px;
+  width: 50%;
+  height: 100%;
+  margin: 0 -5px 0 5px;
 }
 
 .just-container {
-  width: 512px;
-  height: 512px;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
 }
+
 
 @include media("<=tablet") {
   .mint {
@@ -51,16 +112,40 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
 
 .generate-btn {
   color: white;
-  background-color: $pink;
+  background-color: $highlightPink;
   padding: 10px;
-  width: 10rem;
-  box-shadow: 3px 3px;
+  width: 100%;
+  border: none;
 }
 
 .mint-btn {
   color: white;
-  background-color: $pink;
+  background-color: $highlightPink;
   padding: 10px;
-  width: 10rem;
-  box-shadow: 3px 3px;
+  width: 100%;
+  border: none;
+}
+
+.seed-btn {
+  color: white;
+  background-color: $highlightPink;
+  padding: 10px;
+  width: 100%;
+  border: none;
+}
+
+.refresh-btn {
+  color: white;
+  background-color: $highlightPink;
+  padding: 13px 10px 14px 10px;
+  width: 100%;
+  border: none;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
