--- a/wow/src/styles/MintPortrait.scss
+++ b/wow/src/styles/MintPortrait.scss
@@ -32,7 +32,7 @@
   .unicorn {
     position: absolute;
     top: 0;
-    right: -4%;
+    right: 0;
     transform: scaleX(-1);
     height: 25vh;
   }
