--- a/wow/src/styles/Glitch/Glitch3.scss
+++ b/wow/src/styles/Glitch/Glitch3.scss
@@ -26,36 +26,36 @@
 
 @keyframes glitch-preset-3-1 {
   0% {
-    clip-path: inset(10% 10% 70% 10%);
+    clip-path: inset(0 0 70% 0);
   }
   25% {
-    clip-path: inset(10% 70% 10% 10%);
+    clip-path: inset(0 70% 0 0);
   }
   50% {
-    clip-path: inset(70% 10% 10% 10%);
+    clip-path: inset(70% 0 0 0);
   }
   75% {
-    clip-path: inset(10% 10% 10% 70%);
+    clip-path: inset(0 0 0 70%);
   }
   100% {
-    clip-path: inset(10% 10% 70% 10%);
+    clip-path: inset(0 0 70% 0);
   }
 }
 
 @keyframes glitch-preset-3-2 {
   0% {
-    clip-path: inset(70% 10% 10% 10%);
+    clip-path: inset(70% 0 0 0);
   }
   25% {
-    clip-path: inset(10% 10% 10% 70%);
+    clip-path: inset(0 0 0 70%);
   }
   50% {
-    clip-path: inset(10% 10% 70% 10%);
+    clip-path: inset(0 0 70% 0);
   }
   75% {
-    clip-path: inset(10% 70% 10% 10%);
+    clip-path: inset(0 70% 0 0);
   }
   100% {
-    clip-path: inset(70% 10% 10% 10%);
+    clip-path: inset(70% 0 0 0);
   }
 }
