--- a/wow/src/styles/MintLandscape.scss
+++ b/wow/src/styles/MintLandscape.scss
@@ -114,6 +114,11 @@
     }
     .mint-socials {
       display: flex;
+      flex-direction: row;
+      width: 100%;
+      height: 150px;
+      justify-content: space-evenly;
+      align-items: center;
     }
   }
 }
