--- a/wow/src/styles/Basics.scss
+++ b/wow/src/styles/Basics.scss
@@ -71,3 +71,12 @@ table tbody tr:last-child td {
 div {
   box-sizing: border-box;
 }
+
+body a:visited {
+  color: white;
+}
+
+body {
+  overflow-x: hidden;
+}
+
