--- a/wow/src/styles/Preview.scss
+++ b/wow/src/styles/Preview.scss
@@ -6,35 +6,104 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   width: 100vw;
   height: 100vh;
+
+  .preview-content {
+    height: calc(100vh - 69px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100vw;
+  }
+
+  .preview-description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .preview-actions {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 
-.preview-landscape .preview-gif {
-  width: 80vh;
-  height: 80vh;
+.preview-landscape {
+  .preview-content{
+    display: flex;
+    flex-direction: row;
+  }
+
+  .preview-description {
+    width: calc((100vw - 80vh) / 2);
+  }
+
+  .preview-actions {
+    width: calc((100vw - 80vh) / 2);
+  }
+
+  .preview-gif {
+    width: 80vh;
+    height: 80vh;
+  }
+
+  .unicorn {
+    position: fixed;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    height: 35vh;
+    transform: translate(-20%, 20%);
+  }
+
+  .polihorseman {
+    position: fixed;
+    z-index: 0;
+    bottom: 0;
+    right: 0;
+    height: 40vh;
+    transform: translate(18%, -5%) scaleX(-1);
+  }
 }
 
-.preview-portrait .preview-gif {
-  width: 80vw;
-  height: 80vw;
-}
+.preview-portrait {
+  .preview-content{
+    display: flex;
+    flex-direction: column;
+  }
 
-.preview-landscape .unicorn {
-  position: fixed;
-  z-index: 0;
-  bottom: 0;
-  left: 0;
-  height: 50vh;
-  transform: translate(-20%, 20%);
-}
+  .preview-description {
+    height: calc((100vh - 80vw) / 2);
+  }
 
-.preview-portrait .unicorn {
-  position: fixed;
-  z-index: 0;
-  left: 0;
-  bottom: 0;
-  transform: translate(-20%, 20%);
-  width: 50vw;
+  .preview-actions {
+    height: calc((100vh - 80vw) / 2);
+  }
 
+  .preview-gif {
+    width: 80vw;
+    height: 80vw;
+  }
+
+  .unicorn {
+    position: fixed;
+    z-index: 0;
+    bottom: 0;
+    left: 0;
+    height: 25vh;
+    transform: translate(-20%, 20%);
+  }
+
+  .polihorseman {
+    position: fixed;
+    z-index: 0;
+    bottom: 0;
+    right: 0;
+    height: 40vw;
+    transform: translate(18%, -5%) scaleX(-1);
+  }
 }
