--- a/wow/src/styles/MintLandscape.scss
+++ b/wow/src/styles/MintLandscape.scss
@@ -85,9 +85,14 @@
   }
 
   .just-preview {
+    position: relative;
     width: 50%;
     height: 100%;
     margin: 0 -5px 0 5px;
+
+    .just-random-frame-toolbar-text {
+      display: none;
+    }
   }
 
   .gurt {
@@ -112,6 +117,7 @@
     .description-block {
       display: none;
     }
+
     .mint-socials {
       display: flex;
       flex-direction: row;
@@ -121,5 +127,43 @@
       align-items: center;
     }
   }
+
+  .refresh-btn {
+    position: relative;
+  }
+
+  .pointer-wow-refresh-container {
+    position: absolute;
+    left: -2em;
+    top: 50%;
+    width: 2em;
+
+    .pointer-wow {
+      transform: translate(-100%, -50%);
+    }
+  }
+
+  .pointer-wow-tile-container {
+    position: absolute;
+    right: 0;
+    bottom: 20%;
+    transform: translate(70%);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    .pointer-text {
+      margin-top: 9px;
+      padding: 1em 1em;
+    }
+
+    .pointer-wow {
+      width: 5em;
+      transform: scaleX(-1);
+    }
+  }
+
 }
+
 
