--- a/wow/src/styles/MintPortrait.scss
+++ b/wow/src/styles/MintPortrait.scss
@@ -26,11 +26,13 @@
 
       .description-block {
         width: 50%;
+        position: relative;
 
         table {
           tbody {
             display: none;
             position: absolute;
+
             :focus {
               display: flex;
             }
@@ -38,6 +40,9 @@
         }
 
         .mint-socials {
+          position: absolute;
+          bottom: 0;
+          width: 100%;
           display: flex;
           flex-direction: row;
           justify-content: space-evenly;
@@ -49,6 +54,7 @@
   .actions {
     margin-top: 2em;
   }
+
   .unicorn {
     display: none;
   }
@@ -73,7 +79,7 @@
   }
 
   .intro {
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     display: flex;
     flex-direction: column;
@@ -85,6 +91,14 @@
 
   .greetings {
     margin-bottom: 0.5em;
+  }
+
+  .pointer-wow-container {
+    display: none;
+  }
+
+  .description .price-first-free {
+    display: none;
   }
 
 }
