--- a/wow/src/styles/JustFrame.scss
+++ b/wow/src/styles/JustFrame.scss
@@ -6,6 +6,7 @@
 
 .just-random-frame-content {
   display: flex;
+  overflow: hidden;
   justify-content: center;
   align-items: center;
   position: relative;
