--- a/wow/src/styles/Basics.scss
+++ b/wow/src/styles/Basics.scss
@@ -26,9 +26,16 @@ table td {
   font-family: "Inter", serif;
   font-size: 0.8em;
 }
+
 h3 {
   font-size: 0.9em;
   font-family: "Machina r", serif;
+}
+
+h1 {
+  font-size: 1.25em;
+  font-family: "Machina ub", serif;
+  color: $highlightPink;
 }
 
 .text-note {
