--- a/wow/src/styles/MintPortrait.scss
+++ b/wow/src/styles/MintPortrait.scss
@@ -51,10 +51,6 @@
     }
   }
 
-  .actions {
-    margin-top: 2em;
-  }
-
   .unicorn {
     display: none;
   }
@@ -68,9 +64,9 @@
 
   .just-preview {
     max-height: 50vh;
-    margin: 1em 0;
+    margin: 1em auto;
     padding: 1em;
-    width: 100%;
+    width: 90%;
   }
 
   .gurt {
