--- a/wow/src/styles/MintPortrait.scss
+++ b/wow/src/styles/MintPortrait.scss
@@ -7,7 +7,7 @@
 
   .mint-content {
     width: 100%;
-    margin: 2%;
+    padding: 2%;
     display: flex;
     flex-direction: column;
     align-content: center;
@@ -19,6 +19,7 @@
 
   .description {
     width: 100%;
+    margin-bottom: 1em;
 
     .description-bar {
       display: flex;
@@ -49,6 +50,10 @@
         }
       }
     }
+  }
+
+  .actions {
+    margin-top: 1em;
   }
 
   .unicorn {
